# proxy-auto-switcher

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test_build.yml
config/: config.py  example_config.json  proxy_sources.json
core/: proxy_crawler.py  proxy_switcher.py  proxy_validator.py
docs/: design.md
tests/: test_proxy_switcher.py  test_proxy_validator.py
utils/: banner.py  http_client.py  logger.py  os_adapter.py
